add few operator examples

--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,10 @@
                             "src/styles.scss",
                             "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
                         ],
-                        "scripts": []
+                        "scripts": [],
+                        "allowedCommonJsDependencies": [
+                            "quill"
+                        ]
                     },
                     "configurations": {
                         "production": {
